# covenant-ai-consulting

./: .cursorignore  .gitignore  README.md  docker-compose.yml
.cursor/rules/: project-overview.mdc
.github/workflows/: deploy.yml
analysis-engine/: Dockerfile  README.md  pyproject.toml
analysis-engine/src/covenant_analysis/: __init__.py  cli.py  models.py  pipeline.py  report.py  server.py
capture-agent/: README.md  package-lock.json  package.json
capture-agent/src/: db.js  exporter.js  main.js  preload.js  tracker.js  uploader.js
capture-agent/src/renderer/: index.html
client-portal/: Dockerfile  README.md  package-lock.json  package.json
client-portal/prisma/: schema.prisma
client-portal/prisma/migrations/20260406221921_init/: migration.sql
client-portal/prisma/migrations/20260406232632_add_foreign_key_indexes/: migration.sql
client-portal/src/app/: globals.css  layout.tsx  page.tsx
client-portal/src/app/admin/: page.tsx
client-portal/src/app/dashboard/: layout.tsx  page.tsx
client-portal/src/app/login/: page.tsx
client-portal/src/components/: opportunity-card.tsx  sidebar.tsx  stat-card.tsx  time-chart.tsx
client-portal/src/lib/: auth.ts  mock-data.ts  types.ts
docs/case-studies/: covenant-sites-enoch.md
marketing-site/: Dockerfile  README.md  package-lock.json  package.json
marketing-site/src/app/: globals.css  layout.tsx  page.tsx
marketing-site/src/app/about/: page.tsx
marketing-site/src/app/book/: page.tsx
marketing-site/src/components/: BookingForm.tsx  Footer.tsx  Header.tsx
nginx/: covenantai-consulting.conf
(+12 files in other folders)
